--- a/css/webstudio.css
+++ b/css/webstudio.css
@@ -164,6 +164,7 @@
     margin: 0;
     padding: 0;
     margin-bottom: 30px;
+    max-width: 696px;
 }
 
 
@@ -175,7 +176,7 @@
     border: none;
     color: var(--white-text);
     font-size: 16px;
-    line-height: 2.37;
+    line-height: 2.57;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
