--- a/css/webstudio.css
+++ b/css/webstudio.css
@@ -161,7 +161,7 @@
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     margin-bottom: 30px;
     max-width: 696px;
@@ -176,7 +176,7 @@
     border: none;
     color: var(--white-text);
     font-size: 16px;
-    line-height: 2.57;
+    line-height: 3.05;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
