--- a/css/webstudio.css
+++ b/css/webstudio.css
@@ -303,6 +303,7 @@
     padding-bottom: 94px;
     padding-top: 94px;
     max-width: 1600px;
+    margin: auto;
   }
 
 .ourteam-title {
@@ -362,6 +363,7 @@
     padding-top: 60px;
     padding-bottom: 60px;
     max-width: 1600px;
+    margin: auto;
 }
 
 .logo-footer {
